<resources>
    <string name="app_name">Unicoin</string>
    <string name="action_settings">Settings</string>
    <string name="item_name">Item name</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="recurring">Recurring?</string>
    <string name="category">Category</string>
    <string name="add_expense">Add expense</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="date">Date</string>
    <string name="date_yyyy_mm_dd">Date (YYYY-MM--DD)</string>
    <string name="done">Done</string>
    <string name="error_missing_item_name">Please enter item name!</string>
    <string name="error_missing_price">Please enter amount!</string>
    <string name="error_missing_date">Please enter date!</string>
    <string name="error_invalid_date">Please enter a valid date!</string>
    <string name="amount">Amount</string>
    <string name="add_income">Add income</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="title_activity_incomes">IncomesActivity</string>
    <string name="title_activity_expenses">ExpensesActivity</string>
    <string name="title_home">Home</string>
    <string name="title_incomes">Incomes</string>
    <string name="title_expenses">Expenses</string>
    <string name="error_amout_cant_be_zero">Amount can\'t be zero!</string>
    <string name="error_recurring_invalid_date">Recurring is checked. Day can\'t be bigger than 28.</string>
    <string name="delete_all">Delete all</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="weekly_notifications">Weekly notifications</string>
    <string name="daily_notifications">Daily notifications</string>
    <string name="settings_title">Settings</string>
    <string name="prefs_dailynottime">DailyNotTime</string>
    <string name="prefs_dailynotenabled">DailyNotEnabled</string>
    <string name="prefs_weeklynotday">WeeklyNotDay</string>
    <string name="prefs_weeklynottime">WeeklyNotTime</string>
    <string name="title_selectTime">Select Time</string>
    <string name="prefs_weeklyNotEnabled">WeeklyNotEnabled</string>
</resources>
